Fix for BUG#47609 "Many compile warnings are reported for Optimizer in PB2"